--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Injector Origin</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Enhance your Mobile Legends: Bang Bang experience with Injector Origin. Unlock skins, upgrade battle effects, and more.">
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Injector Origin</h1>
-            <p>Enhance your Mobile Legends: Bang Bang experience with visual upgrades.</p>
+            <p>Enhance your Mobile Legends: Bang Bang experience with visual enhancements.</p>
         </div>
     </header>
     <main class="container">
@@ -20,7 +21,8 @@
                 <li>Unlock Skins</li>
                 <li>Battle Effects</li>
                 <li>Hero Details & Tips</li>
-                <li>Search Functionality</l>
+                <li>Search Functionality</li>
+                <li>Favorites</li>
             </ul>
         </section>
         <section>
@@ -29,13 +31,22 @@
         </section>
         <section>
             <h2>About Us</h2>
-            <p>Injector Origin is dedicated to enhancing your gaming experience by providing visual upgrades and information. We are not affiliated with Moonton, but we respect their work and encourage supporting them through official channels.</p>
+            <p>Injector Origin is dedicated to enhancing your gaming experience by providing visual upgrades and information. We respect Moonton’s work and encourage supporting them through official channels.</p>
+        </section>
+        <section>
+            <h2>Privacy Policy</h2>
+            <p>Your privacy is important to us. For details on how we handle user data, please read our <a href="docs/privacy-policy.html">Privacy Policy</a>.</p>
+        </section>
+        <section>
+            <h2>Download the App</h2>
+            <p>Get Injector Origin now and start enhancing your gaming experience! <a href="https://play.google.com/store/apps/details?id=com.injector.origin" target="_blank">Download from Google Play</a>.</p>
         </section>
     </main>
     <footer>
         <div class="container">
-            <p>© 2024 Injector Origin. All rights reserved. <a href="https://github.com/io-rmdragneel/Injector-Origin">GitHub Repository</a></p>
+            <p>© 2024 Injector Origin. All rights reserved. <a href="https://github.com/io-rmdragneel/injector-origin">GitHub Repository</a></p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
