--- a/index.html
+++ b/index.html
@@ -5,46 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Injector Origin</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Enhance your Mobile Legends: Bang Bang experience with Injector Origin. Unlock skins, upgrade battle effects, and more.">
+    <meta name="description" content="Enhance your Mobile Legends: Bang Bang experience with Injector Origin. Unlock skins, upgrade battle effects, and access detailed hero information.">
+    <meta name="keywords" content="Mobile Legends, MLBB, skins, battle effects, game enhancements, Injector Origin">
+    <meta name="author" content="Injector Origin Team">
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Injector Origin</h1>
-            <p>Enhance your Mobile Legends: Bang Bang experience with visual enhancements.</p>
+            <p>Enhance your Mobile Legends: Bang Bang experience with visual upgrades and detailed hero information.</p>
         </div>
     </header>
     <main class="container">
         <section>
             <h2>Features</h2>
             <ul>
-                <li>Unlock Skins</li>
-                <li>Battle Effects</li>
-                <li>Hero Details & Tips</li>
-                <li>Search Functionality</li>
-                <li>Favorites</li>
+                <li>Unlock Skins: Access a variety of skins to personalize your heroes.</li>
+                <li>Battle Effects: Upgrade your battle effects for a more immersive experience.</li>
+                <li>Hero Details & Tips: Get detailed information and tips for each hero.</li>
+                <li>Search Functionality: Quickly find the skins and effects you're looking for.</li>
+                <li>Favorites: Save your favorite skins and effects for easy access.</li>
             </ul>
         </section>
         <section>
             <h2>Contact Us</h2>
-            <p>If you have any questions or feedback, please reach out to us at <a href="mailto:injector.origin@gmail.com">injector.origin@gmail.com</a>.</p>
+            <p>For any questions, feedback, or support, please reach out to us at <a href="mailto:injector.origin@gmail.com">injector.origin@gmail.com</a>.</p>
         </section>
         <section>
             <h2>About Us</h2>
-            <p>Injector Origin is dedicated to enhancing your gaming experience by providing visual upgrades and information. We respect Moonton’s work and encourage supporting them through official channels.</p>
+            <p>Injector Origin is committed to enhancing your Mobile Legends: Bang Bang experience by providing visual upgrades and detailed hero information. We value Moonton’s work and encourage users to support them through official channels.</p>
         </section>
         <section>
             <h2>Privacy Policy</h2>
-            <p>Your privacy is important to us. For details on how we handle user data, please read our <a href="docs/privacy-policy.html">Privacy Policy</a>.</p>
+            <p>Your privacy is important to us. Learn more about how we handle your data in our <a href="docs/privacy-policy.html">Privacy Policy</a>.</p>
         </section>
         <section>
             <h2>Download the App</h2>
-            <p>Get Injector Origin now and start enhancing your gaming experience! <a href="https://play.google.com/store/apps/details?id=com.injector.origin" target="_blank">Download from Google Play</a>.</p>
+            <p>Start enhancing your Mobile Legends: Bang Bang experience today! <a href="https://play.google.com/store/apps/details?id=com.injector.origin" target="_blank">Download Injector Origin from Google Play</a>.</p>
         </section>
     </main>
     <footer>
         <div class="container">
-            <p>© 2024 Injector Origin. All rights reserved. <a href="https://github.com/io-rmdragneel/injector-origin">GitHub Repository</a></p>
+            <p>© 2024 Injector Origin. All rights reserved. <a href="https://github.com/io-rmdragneel/injector-origin" target="_blank">Visit our GitHub Repository</a></p>
         </div>
     </footer>
     <script src="script.js"></script>
