--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Injector Origin</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Enhance your Mobile Legends: Bang Bang experience with Injector Origin. Unlock skins, upgrade battle effects, and access detailed hero information.">
+    <meta name="description" content="This app enhances your Mobile Legends: Bang Bang (MLBB) gaming experience by unlocking and upgrading visual skins and battle effects. It's designed to provide an enriched visual experience without affecting gameplay.">
     <meta name="keywords" content="Mobile Legends, MLBB, skins, battle effects, game enhancements, Injector Origin">
     <meta name="author" content="Injector Origin Team">
 </head>
@@ -13,18 +13,19 @@
     <header>
         <div class="container">
             <h1>Injector Origin</h1>
-            <p>Enhance your Mobile Legends: Bang Bang experience with visual upgrades and detailed hero information.</p>
+            <p>This app enhances your Mobile Legends: Bang Bang (MLBB) gaming experience by unlocking and upgrading visual skins and battle effects. It's designed to provide an enriched visual experience without affecting gameplay.</p>
         </div>
     </header>
     <main class="container">
         <section>
             <h2>Features</h2>
             <ul>
-                <li>Unlock Skins: Access a variety of skins to personalize your heroes.</li>
-                <li>Battle Effects: Upgrade your battle effects for a more immersive experience.</li>
-                <li>Hero Details & Tips: Get detailed information and tips for each hero.</li>
-                <li>Search Functionality: Quickly find the skins and effects you're looking for.</li>
-                <li>Favorites: Save your favorite skins and effects for easy access.</li>
+                <li>Unlock Upgrade/Skins: Access a variety of visual skins for your favorite Mobile Legends: Bang Bang (MLBB) heroes.</li>
+                <li>Unlock Battle Effects: Enhance your visual experience with unique battle effects.</li>
+                <li>Hero Details & Tips: Get detailed information and tips for various heroes to improve your gameplay and strategy.</li>
+                <li>Search Functionality: Easily search for your favorite heroes, skins, battle effects, and many more.</li>
+                <li>Theme Options: Provide different themes for the app to match users' preferences.</li>
+                <li>Feedback and Suggestions: Implement a feature for users to submit feedback and suggestions directly within the app.</li>
             </ul>
         </section>
         <section>
@@ -41,7 +42,7 @@
         </section>
         <section>
             <h2>Download the App</h2>
-            <p>Start enhancing your Mobile Legends: Bang Bang experience today! <a href="https://play.google.com/store/apps/details?id=com.injector.origin" target="_blank">Download Injector Origin from Google Play</a>.</p>
+            <p>Start enhancing your Mobile Legends: Bang Bang experience today! <a href="https://play.google.com/store/apps/details?id=com.elfilibustero.origin" target="_blank">Download Injector Origin from Google Play</a>.</p>
         </section>
     </main>
     <footer>
